--- a/src/libide/editor/ide-editor-workspace.ui
+++ b/src/libide/editor/ide-editor-workspace.ui
@@ -7,20 +7,20 @@
         <property name="show-fullscreen-button">true</property>
         <property name="menu-id">ide-editor-workspace-menu</property>
         <property name="visible">true</property>
-        <child type="primary">
+        <!-- <child type="primary">
           <object class="IdeSurfacesButton" id="surface_menu_button">
             <property name="focus-on-click">false</property>
             <property name="menu-id">ide-editor-workspace-surfaces-menu</property>
             <property name="show-accels">true</property>
             <property name="show-arrow">true</property>
             <property name="show-icons">true</property>
-            <!-- disable transitions since they'll cause jitter with the
-                 whole surface changing below it. -->
+            /* disable transitions since they'll cause jitter with the
+                 whole surface changing below it. */
             <property name="transitions-enabled">false</property>
             <property name="has-tooltip">true</property>
             <property name="tooltip-text" translatable="yes">Switch surface</property>
           </object>
-        </child>
+        </child> -->
         <child type="secondary">
           <object class="DzlPriorityBox">
             <property name="visible">true</property>
