--- a/src/libide/gui/ide-primary-workspace.ui
+++ b/src/libide/gui/ide-primary-workspace.ui
@@ -7,21 +7,29 @@
         <property name="show-close-button">true</property>
         <property name="show-fullscreen-button">true</property>
         <property name="visible">true</property>
-        <child type="left">
+        <!-- <child type="left">
           <object class="IdeSurfacesButton" id="surface_menu_button">
             <property name="focus-on-click">false</property>
             <property name="menu-id">ide-primary-workspace-surfaces-menu</property>
             <property name="show-accels">true</property>
             <property name="show-arrow">true</property>
             <property name="show-icons">true</property>
-            <!-- disable transitions since they'll cause jitter with the
-                 whole surface changing below it. -->
+            /* disable transitions since they'll cause jitter with the
+                 whole surface changing below it. */
             <property name="transitions-enabled">false</property>
             <property name="has-tooltip">true</property>
             <property name="tooltip-text" translatable="yes">Switch surface</property>
           </object>
-        </child>
+        </child> -->
         <child type="title">
+          <object class="GtkLabel" id="project_title">
+            <property name="ellipsize">end</property>
+            <property name="visible">true</property>
+            <property name="xalign">0.0</property>
+            <property name="label">Albany</property>
+          </object>
+        </child>
+        <!-- <child type="title">
           <object class="IdeOmniBar" id="omni_bar">
             <property name="halign">center</property>
             <property name="hexpand">false</property>
@@ -35,12 +43,7 @@
               </object>
             </child>
           </object>
-        </child>
-        <child type="right-of-center">
-          <object class="IdeRunButton" id="run_button">
-            <property name="visible">true</property>
-          </object>
-        </child>
+        </child> -->
         <child type="right">
           <object class="IdeSearchButton" id="search_button">
             <property name="visible">true</property>
@@ -62,6 +65,11 @@
                 <property name="visible">true</property>
               </object>
             </child>
+          </object>
+        </child>
+        <child type="right">
+          <object class="IdeRunButton" id="run_button">
+            <property name="visible">true</property>
           </object>
         </child>
       </object>
