--- a/src/plugins/newcomers/gbp-newcomers-section.ui
+++ b/src/plugins/newcomers/gbp-newcomers-section.ui
@@ -11,7 +11,7 @@
         <property name="width-request">600</property>
         <property name="halign">center</property>
         <property name="valign">start</property>
-        <child>
+        <!-- <child>
           <object class="GtkLabel">
             <property name="visible">true</property>
             <property name="xalign">0.0</property>
@@ -159,7 +159,7 @@ Python</property>
               </object>
             </child>
           </object>
-        </child>
+        </child> -->
       </object>
     </child>
   </template>
