Added another keyboard shortcut for redo.
Added <ctrl>y as a secondary shortcut for redo because the
<ctrl><shift>z shortcut does not work when keyboard layout
is set to Arabic.

--- a/src/plugins/editor/default.css
+++ b/src/plugins/editor/default.css
@@ -35,6 +35,10 @@
                           "clear-selection" ()
                           "remove-cursors" ()
                           "redo" () };
+  bind "<ctrl>y" { "clear-count" ()
+                   "clear-selection" ()
+                   "remove-cursors" ()
+                   "redo" () };
   bind "<ctrl>z" { "clear-count" ()
                    "clear-selection" ()
                    "remove-cursors" ()
