--- a/src/plugins/newcomers/gbp-newcomers-section.ui
+++ b/src/plugins/newcomers/gbp-newcomers-section.ui
@@ -46,7 +46,7 @@
                   <object class="GbpNewcomersProject">
                     <property name="name" translatable="yes">Builder</property>
                     <property name="description" translatable="yes">An IDE for writing GNOME-based software</property>
-                    <property name="icon-name">org.gnome.Builder</property>
+                    <property name="icon-name">org.alusus.Alwarsha</property>
                     <property name="uri">https://gitlab.gnome.org/GNOME/gnome-builder.git</property>
                     <property name="visible">true</property>
                     <property name="languages">C
