--- a/src/libide/gui/ide-shortcuts-window.ui
+++ b/src/libide/gui/ide-shortcuts-window.ui
@@ -574,7 +574,7 @@
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="visible">true</property>
-                <property name="accelerator">&lt;ctrl&gt;F5</property>
+                <property name="accelerator">F5</property>
                 <property name="title" translatable="yes" context="shortcut window">Run</property>
               </object>
             </child>
